--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-/* ======== google fonts ======== */
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 
-/* ======= base style ====== */
 * {
   margin: 0;
   padding: 0;
@@ -9,14 +7,13 @@
   font-family: "Source Sans Pro", sans-serif;
 }
 
-/* ========= pre-define css ========= */
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  color: #000d6b;
+  color: #6b0000;
   font-weight: 600;
   margin-bottom: 0;
 }
@@ -46,7 +43,7 @@ ul {
 }
 
 .section__title {
-  color: #000d6b;
+  color: #6b0000;
   font-weight: 600;
   font-size: 2rem;
 }
@@ -69,7 +66,7 @@ section {
 
 .btn {
   padding: 7px 15px;
-  background: #000d6b;
+  background: #6b0000;
   color: #fff;
   border: none;
   outline: none;
@@ -79,7 +76,7 @@ section {
 
 .btn:hover {
   color: #fff !important;
-  background: #000c6bd0;
+  background: #6b0000d0;
 }
 
 @media only screen and (max-width: 768px) {
