--- a/src/styles/blog-item.css
+++ b/src/styles/blog-item.css
@@ -22,7 +22,7 @@
 }
 
 .blog__author {
-  color: #000d6b;
+  color: #6b0000;
   font-weight: 600;
 }
 
@@ -32,7 +32,7 @@
 
 .blog__title {
   text-decoration: none;
-  color: #000d6b;
+  color: #6b0000;
   font-size: 1.2rem;
   font-weight: 600;
   transition: 0.3s;
