--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -1,5 +1,5 @@
 .common__section {
-  background: linear-gradient(rgb(0, 13, 107, 0.6), rgb(0, 13, 107, 0.6)),
+  background: linear-gradient(rgba(107, 0, 0, 0.6), rgba(107, 0, 0, 0.6)),
     url("../assets/all-images/drive.jpg");
   background-position: center;
   background-size: cover;
