--- a/src/styles/payment-method.css
+++ b/src/styles/payment-method.css
@@ -1,12 +1,12 @@
 .payment label {
   font-weight: 600;
-  color: #000d6b;
+  color: #6b0000;
 }
 
 .payment button {
   padding: 8px 15px;
   border-radius: 5px;
-  background: #000d6b;
+  background: #6b0000;
   color: #fff;
   border: none;
   outline: none;
